k8s-cluster-bootstrap/elk-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    name: logging
    env: production
    team: platform-engineering
    monitoring: enabled

    # Kubernetes standard labels
    app.kubernetes.io/name: logging-stack
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: terraform
