k8s-cluster-bootstrap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique-app
  labels:
    # Industry standard labels for organization and automation
    name: boutique-app
    env: production
    team: online-boutique-core
    # Enables automatic sidecar injection if you add a Service Mesh later
    istio-injection: disabled 
    # Label for Prometheus to discover metrics in this namespace
    monitoring: enabled
